Fixed Capacitor Code Fields on Mobile

--- a/Stylesheets/Top_Bar.css
+++ b/Stylesheets/Top_Bar.css
@@ -257,10 +257,6 @@
   .Capacitor_Calculator_Wrapper{
     margin-top: 60px;
   }
-  .Digit_Buttons{
-    height: 6vw;
-    width: 6vw;
-  }
 }
 
 
